updated with collapsed male and neutral values

--- a/experiments/norming_study_one/results/norming_analysis_r.Rmd
+++ b/experiments/norming_study_one/results/norming_analysis_r.Rmd
@@ -117,5 +117,10 @@ mean(underlying$trial_count)
 
 
 
+```{r}
+usable_trials %>%
+  group_by(orthog) %>%
+  summarize(mean(equalized_response))
+```
 
 
