--- a/results/1_Reading_Neutrality/final_analysis.Rmd
+++ b/results/1_Reading_Neutrality/final_analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Gender Processing of Gendered and Gender-Neutral Professional and Personal
+title: Processing of Gendered and Gender-Neutral Professional and Personal
   Titles
 author: "Bran Papineau"
 date: May 2021
@@ -13,7 +13,7 @@ output:
 ---
 
 
-This document contains the totality of the analysis I am carrying out for my first Qualifying Paper towards the PhD in Linguistics at Stanford University. This project deals with the processing of gendered and gender-neutral personal and professional titles. 
+This document contains the totality of the analysis I am carrying out on the first experiment of my first Qualifying Paper towards the PhD in Linguistics at Stanford University. This project deals with the processing of gendered and gender-neutral personal and professional titles. This is also being developed as my analysis portion of the final project in Judith Degen's Methods in Psycholinguistics class (LING245B).
 
 # Preliminaries
 
@@ -53,7 +53,10 @@ theme_set(theme_bw())
 This reads in our .csv file with all 37,800 data points logged during the experiment. 
 
 ```{r}
-all_data <- read.csv('gender_processing_a_selfpaced_reading_time_study-merged.csv') 
+all_data <- read.csv('gender_processing_a_selfpaced_reading_time_study-merged.csv')
+
+all_data %>%
+  head()
 ```
 
 
@@ -77,6 +80,9 @@ This simply filters out any data point which has the <b>trial_id</b> <i>'example
 ```{r}
 all_data <- all_data %>% 
   filter(trial_id!= 'example')
+
+all_data %>% 
+  select(workerid,rt,trial_id)
 ```
 
 ### Filter out non-critical data points
@@ -86,6 +92,9 @@ Similar to the previous tab (Removing Example Trials), this code removes from ou
 ```{r}
 all_data <- all_data %>%
   filter(region=='critical')
+
+all_data %>% 
+  select(workerid,rt,region)
 ```
 
 ### Running Exclusion Criteria
@@ -99,11 +108,7 @@ So, we create a data frame with the participants who didn't meet the threshold b
 ```{r}
 exclusion <- all_data %>% group_by(workerid) %>%
   summarise(accuracy = mean(response_correct)) 
- # mutate(exclude = ifelse(accuracy < 0.85,'Yes','No')) %>%
- # filter(exclude == 'Yes') %>%
- # select(workerid)
 
-#all_data <- all_data[!(all_data$workerid %in% exclusion$workerid),]
 exclusion
 ```
 <br>
@@ -115,126 +120,144 @@ exclusion <- exclusion %>%
 
 exclusion
 ```
+<br> 
+Now we want to just get a list of all the participants who have been assigned a <i>'Yes'</i> value, in order to eventually remove these participants from all the data. This code does that.
+
+```{r}
+exclusion = exclusion %>% 
+  filter(exclude == 'Yes') %>%
+  select(workerid)
+
+exclusion
+```
+<br>
+Now, finally, we can exclude these participants! We do this by redefining <b>all_data</b> as itself, but without those rows which have <b>workerid</b> values appear in the list we just made in the above step! 
+
+```{r}
+all_data <- all_data[!(all_data$workerid %in% exclusion$workerid),]
+
+all_data %>% 
+  select(workerid,rt,trial_id)
+```
+<br>
+If we want to check that the right number was subtracted, we can get the length of the first list we made (<b>exclusion</b>) and see if that matches the difference between the number of unique participants in our new <b>all_data</b> data frame and the original one (which had 200 to begin with). To do this we get the length of the list of unique worker ids in the <b>all_data</b> data frame, and subtract it from 200. Then we compare this to the length of the <b>exclusion</b> list.
+
+```{r}
+200 - length(unique(all_data$workerid))
+
+length(unique(exclusion$workerid))
+```
+<br>
+If we're being really extra, we can also run this as an equivalency to get a boolean True/False value:
+
+```{r}
+200 - length(unique(all_data$workerid)) == length(unique(exclusion$workerid))
+```
+
+## Adding in Additional Important Trial Information {.tabset}
+Now that we have only the rows we want, let's add some new columns, which will contain important information for each data point. Here, we will be adding:
+
+- Gender Ideology Subscores
+- Trial Genders
+- Trial Morphology Types
+- Critical Item Length
+- Trial Congruency 
+
+These features will be use in our data visualization and analysis.<br>
+<br>
+Again, this code is fairly ugly, so I've once again divvied it up into individual tabs, which you're free to peruse or not.
 
 
-
-## Adding in Gender Trascendence and Gender-Linked Subscales
-
-### Defining Subscore Groups
+### Defining Gender Subscores
+<br>
+The question under investigation here is whether or not individuals' conceptions of gender affect how they process  gendered and gender-neutral forms of English personal and professional titles. <br>
+<br>
+In order to examine this, we need to quanify participants' ideological views! Here we have adopted the 13-item Social Roles Questionnaire put forth in Baber & Tucker (2006). Questions 1-5 correlate to the <i>'Gender Transcendent'</i> subscale, and questions 6-13 correspond to the <i>'Gender Linked'</i> subscale. Each item is scored on a scale of 0-100. So, the first thing we want to do is make two lists of columns which correspond to these two subscales, since the questions are stored individually in the data:
 
 ```{r}
 gender_transcendence_cols <- c('subject_information.gender_q1','subject_information.gender_q2','subject_information.gender_q3','subject_information.gender_q4','subject_information.gender_q5')
 
 gender_linked_cols <- c('subject_information.gender_q6','subject_information.gender_q7','subject_information.gender_q8','subject_information.gender_q9','subject_information.gender_q10','subject_information.gender_q11','subject_information.gender_q12','subject_information.gender_q13')
 ```
-
-### Adding the subscore columns
+<br>
+Now we can use the mutate() method on <b>all_data</b> to add two new columns, one for each subscale. We tell R to take the means of the specified columns in [column_names] of <b>all_data</b> for each individual row: rowMeans(all_data[column_names]).<br>
+<br>
+We also have to subtract this mean from 100 in the case of the <i>'Gender Transcendent'</i> subscale, since it is inversely scored. This is easy enough to do during the mutation step:
 
 ```{r}
 all_data <- all_data %>%
   mutate(gender_trans = 100 - (rowMeans(all_data[gender_transcendence_cols]))) %>%
   mutate(gender_link = rowMeans(all_data[gender_linked_cols]))
+
+all_data %>%
+  select(workerid,rt,gender_trans) 
 ```
 
-## Adding Gender and Morph_Type Columns
+### Adding Gender
+<br>
+We also want to add whether the trial included a female or male referent (but also, like, destroy the binary!). In order to do this, we'll just add a <b>trial_gender</b> column that says <i>'female'</i> if the condition was either <i>'neutral_female'</i> or <i>'congruent_female'</i>. Otherwise, we want the <b>trial_gender</b> to say <i>'male'</i>.
+<br><br>
 
 ```{r}
 all_data <- all_data %>%
-  mutate(trial_gender = ifelse(condition=='neutral_female' | condition == 'congruent_female','female','male')) %>%
-  mutate(morph_type = ifelse(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero','compound','adoption'))
+  mutate(trial_gender = ifelse(condition=='neutral_female' | condition == 'congruent_female','female','male'))
+
+all_data %>%
+  select(workerid,rt,condition,trial_id,trial_gender)
 ```
 
-## Adding Form Length
+### Adding Morphology Type
+<br>
+Now we want to add whether or not the lexeme's neutral form is developed by compounding (as in <i>'congress-person'</i>) or by the adoption of the male form (as in <i>'actor'</i> being used more for both men and women). In this study, we only have six lexemes of the latter type, so we'll just tell R to assign those a <b>morph_type</b> value of <i>'adoption'</i> (for 'male adoption'), and all else will be assigned a value of <i>'compound'</i>.
+<br><br>
+
+```{r}
+all_data <- all_data%>%
+  mutate(morph_type = ifelse(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero','compound','adoption'))
+
+all_data %>%
+  select(rt,lexeme,morph_type)
+```
+
+
+### Adding Form Length
+<br>
+Another important factor we want to explore is the length of the critical item! In order to add this, we simply create a new column <b>form_length</b> and tell R to input as that column's value the length of the string that appears in that row's <b>form</b> column, which corresponds to the orthograpic form of the critical item in that trial. <i>Note that this will include spaces in the count!</i>
+<br><br>
 
 ```{r}
 all_data <- all_data %>%
   mutate(form_length = str_length(form))
+
+all_data %>%
+  select(rt,lexeme,form,form_length)
 ```
 
 
-## Adding Congruency Column
+### Adding Congruency Column
+<br>
+Finally, let's make sure we have a column which records whether or not the trial was gender-congruent (as in <i>'Shelby is a congresswoman'</i>) or gender neutral (as in <i>'Shelby is a congressperson'</i>). We add a <b>trial_congruency</b> column, which is valued as <i>'congruent'</i> if that row's condition is one of the two congruent conditions. Otherwise, it gets valued as <i>'neutral'</i>.
 
 ```{r}
 all_data <- all_data %>%
   mutate(trial_congruency = ifelse(condition=='congruent_male' | condition == 'congruent_female','congruent','neutral'))
+
+all_data %>%
+  select(rt,condition,trial_congruency)
 ```
 
 ## Review summary with new columns 
+<br>
+Now we can use the head() method to check the current state of the data frame, which should include a grand total of 46 columns! 
+<br><br>
 
 ```{r}
-summary(all_data)
+head(all_data)
 ```
+<br>
+And now, our data should be completely ready to visualize and analyze! 
 
-## 
+# Data Visualization
 
-# Data Visualisation
-
-```{r}
-to_plot <- all_data %>%
-  group_by(condition) %>%
-  summarise(mean_rt = mean(rt), CI.LOW = ci.low(rt), CI.HIGH = ci.high(rt)) %>%
-  ungroup() %>%
-  mutate(YMin = mean_rt-CI.LOW, YMax = mean_rt+CI.HIGH)
-```
-
-
-```{r}
-ggplot(to_plot,aes(x=condition,y=mean_rt, fill=condition)) + 
-  geom_bar(stat='identity') + 
-  geom_errorbar(aes(ymin=YMin,ymax=YMax),width=.25)
-```
-
-
-```{r}
-all_data %>% filter(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero') %>%
-  group_by(trial_gender) %>%
-  summarise(mean_rt = mean(rt)) %>%
-  ggplot(aes(x= trial_gender, y=mean_rt)) + 
-  geom_col()
-```
-
-```{r}
-all_data %>%
-  filter(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero') %>%
-  group_by(trial_congruency) %>%
-  summarise(mean_rt = mean(rt)) %>%
-  ggplot(aes(x= trial_congruency, y=mean_rt)) + 
-  geom_col()
-```
-
-
-```{r}
-all_data %>%
-  group_by(morph_type) %>%
-  summarise(mean_rt = mean(rt)) %>%
-  ggplot(aes(x= morph_type, y=mean_rt)) + 
-  geom_col()
-```
-
-```{r}
-all_data %>%
-  group_by(form_length) %>%
-  summarise(mean_rt = mean(rt)) %>%
-  ggplot(aes(x= form_length, y=mean_rt)) + 
-  geom_col()
-```
-
-```{r}
-reg_analysis <- lmer(log(rt)~condition*morph_type + (1|workerid) + (1|lexeme) + (1|form_length), data = all_data)
-```
-
-```{r}
-summary(reg_analysis)
-```
-```{r}
-plot()
-```
-
-
-```{r}
-gender_verification <- lmer(gender_link~gender_trans + (1|workerid), data=all_data)
-```
-```{r}
-summary(gender_verification)
-```
+<b>[THIS PART UNDER CONSTRUCTION: COMING SOON]</b>
 
