--- a/results/1_Reading_Neutrality/bert_test.ipynb
+++ b/results/1_Reading_Neutrality/bert_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0de9c6c1",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "3c0b3b98",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "055e1e61",
    "metadata": {},
    "outputs": [
@@ -44,49 +44,36 @@
       "The specified target token `anchorman` does not exist in the model vocabulary. Replacing with `anchor`.\n",
       "The specified target token `anchorwoman` does not exist in the model vocabulary. Replacing with `anchor`.\n",
       "The specified target token `flight attendant` does not exist in the model vocabulary. Replacing with `flight`.\n",
-      "The specified target token `flight attendant` does not exist in the model vocabulary. Replacing with `flight`.\n",
       "The specified target token `stewardess` does not exist in the model vocabulary. Replacing with `steward`.\n",
       "The specified target token `businessperson` does not exist in the model vocabulary. Replacing with `business`.\n",
-      "The specified target token `businessperson` does not exist in the model vocabulary. Replacing with `business`.\n",
       "The specified target token `businesswoman` does not exist in the model vocabulary. Replacing with `business`.\n",
-      "The specified target token `camera operator` does not exist in the model vocabulary. Replacing with `camera`.\n",
       "The specified target token `camera operator` does not exist in the model vocabulary. Replacing with `camera`.\n",
       "The specified target token `cameraman` does not exist in the model vocabulary. Replacing with `camera`.\n",
       "The specified target token `camerawoman` does not exist in the model vocabulary. Replacing with `camera`.\n",
       "The specified target token `congressperson` does not exist in the model vocabulary. Replacing with `congress`.\n",
-      "The specified target token `congressperson` does not exist in the model vocabulary. Replacing with `congress`.\n",
       "The specified target token `congresswoman` does not exist in the model vocabulary. Replacing with `congress`.\n",
       "The specified target token `craftsperson` does not exist in the model vocabulary. Replacing with `crafts`.\n",
-      "The specified target token `craftsperson` does not exist in the model vocabulary. Replacing with `crafts`.\n",
       "The specified target token `craftswoman` does not exist in the model vocabulary. Replacing with `crafts`.\n",
-      "The specified target token `crewmember` does not exist in the model vocabulary. Replacing with `crew`.\n",
       "The specified target token `crewmember` does not exist in the model vocabulary. Replacing with `crew`.\n",
       "The specified target token `crewman` does not exist in the model vocabulary. Replacing with `crew`.\n",
       "The specified target token `crewwoman` does not exist in the model vocabulary. Replacing with `crew`.\n",
       "The specified target token `firefighter` does not exist in the model vocabulary. Replacing with `fire`.\n",
-      "The specified target token `firefighter` does not exist in the model vocabulary. Replacing with `fire`.\n",
       "The specified target token `fireman` does not exist in the model vocabulary. Replacing with `fire`.\n",
       "The specified target token `firewoman` does not exist in the model vocabulary. Replacing with `fire`.\n",
-      "The specified target token `foreperson` does not exist in the model vocabulary. Replacing with `fore`.\n",
       "The specified target token `foreperson` does not exist in the model vocabulary. Replacing with `fore`.\n",
       "The specified target token `forewoman` does not exist in the model vocabulary. Replacing with `fore`.\n",
       "The specified target token `huntress` does not exist in the model vocabulary. Replacing with `hunt`.\n",
       "The specified target token `layperson` does not exist in the model vocabulary. Replacing with `lay`.\n",
-      "The specified target token `layperson` does not exist in the model vocabulary. Replacing with `lay`.\n",
       "The specified target token `layman` does not exist in the model vocabulary. Replacing with `lay`.\n",
       "The specified target token `laywoman` does not exist in the model vocabulary. Replacing with `lay`.\n",
       "The specified target token `police officer` does not exist in the model vocabulary. Replacing with `police`.\n",
-      "The specified target token `police officer` does not exist in the model vocabulary. Replacing with `police`.\n",
       "The specified target token `policewoman` does not exist in the model vocabulary. Replacing with `police`.\n",
       "The specified target token `salesperson` does not exist in the model vocabulary. Replacing with `sales`.\n",
-      "The specified target token `salesperson` does not exist in the model vocabulary. Replacing with `sales`.\n",
       "The specified target token `saleswoman` does not exist in the model vocabulary. Replacing with `sales`.\n",
-      "The specified target token `stunt double` does not exist in the model vocabulary. Replacing with `stunt`.\n",
       "The specified target token `stunt double` does not exist in the model vocabulary. Replacing with `stunt`.\n",
       "The specified target token `stuntman` does not exist in the model vocabulary. Replacing with `stunt`.\n",
       "The specified target token `stuntwoman` does not exist in the model vocabulary. Replacing with `stunt`.\n",
       "The specified target token `villainess` does not exist in the model vocabulary. Replacing with `villain`.\n",
-      "The specified target token `meteorologist` does not exist in the model vocabulary. Replacing with `meteor`.\n",
       "The specified target token `meteorologist` does not exist in the model vocabulary. Replacing with `meteor`.\n",
       "The specified target token `weatherman` does not exist in the model vocabulary. Replacing with `weather`.\n",
       "The specified target token `weatherwoman` does not exist in the model vocabulary. Replacing with `weather`.\n"
@@ -111,22 +98,6 @@
        "  'score': 0.0004314810794312507,\n",
        "  'token': 4477,\n",
        "  'token_str': 'hunter'},\n",
-       " {'sequence': 'david is a hunter.',\n",
-       "  'score': 0.0004314810794312507,\n",
-       "  'token': 4477,\n",
-       "  'token_str': 'hunter'},\n",
-       " {'sequence': 'david is a hunter.',\n",
-       "  'score': 0.0004314810794312507,\n",
-       "  'token': 4477,\n",
-       "  'token_str': 'hunter'},\n",
-       " {'sequence': 'david is a actor.',\n",
-       "  'score': 0.00030812370823696256,\n",
-       "  'token': 3364,\n",
-       "  'token_str': 'actor'},\n",
-       " {'sequence': 'david is a actor.',\n",
-       "  'score': 0.00030812370823696256,\n",
-       "  'token': 3364,\n",
-       "  'token_str': 'actor'},\n",
        " {'sequence': 'david is a actor.',\n",
        "  'score': 0.00030812370823696256,\n",
        "  'token': 3364,\n",
@@ -143,22 +114,6 @@
        "  'score': 9.210483403876424e-05,\n",
        "  'token': 5394,\n",
        "  'token_str': 'hero'},\n",
-       " {'sequence': 'david is a hero.',\n",
-       "  'score': 9.210483403876424e-05,\n",
-       "  'token': 5394,\n",
-       "  'token_str': 'hero'},\n",
-       " {'sequence': 'david is a hero.',\n",
-       "  'score': 9.210483403876424e-05,\n",
-       "  'token': 5394,\n",
-       "  'token_str': 'hero'},\n",
-       " {'sequence': 'david is a villain.',\n",
-       "  'score': 7.901770732132718e-05,\n",
-       "  'token': 12700,\n",
-       "  'token_str': 'villain'},\n",
-       " {'sequence': 'david is a villain.',\n",
-       "  'score': 7.901770732132718e-05,\n",
-       "  'token': 12700,\n",
-       "  'token_str': 'villain'},\n",
        " {'sequence': 'david is a villain.',\n",
        "  'score': 7.901770732132718e-05,\n",
        "  'token': 12700,\n",
@@ -171,10 +126,6 @@
        "  'score': 6.668168498435989e-05,\n",
        "  'token': 26286,\n",
        "  'token_str': 'craftsman'},\n",
-       " {'sequence': 'david is a business.',\n",
-       "  'score': 5.305394734023139e-05,\n",
-       "  'token': 2449,\n",
-       "  'token_str': 'business'},\n",
        " {'sequence': 'david is a business.',\n",
        "  'score': 5.305394734023139e-05,\n",
        "  'token': 2449,\n",
@@ -199,18 +150,6 @@
        "  'score': 3.0114033506833948e-05,\n",
        "  'token': 3677,\n",
        "  'token_str': 'host'},\n",
-       " {'sequence': 'david is a host.',\n",
-       "  'score': 3.0114033506833948e-05,\n",
-       "  'token': 3677,\n",
-       "  'token_str': 'host'},\n",
-       " {'sequence': 'david is a host.',\n",
-       "  'score': 3.0114033506833948e-05,\n",
-       "  'token': 3677,\n",
-       "  'token_str': 'host'},\n",
-       " {'sequence': 'david is a lay.',\n",
-       "  'score': 2.2509973859996535e-05,\n",
-       "  'token': 3913,\n",
-       "  'token_str': 'lay'},\n",
        " {'sequence': 'david is a lay.',\n",
        "  'score': 2.2509973859996535e-05,\n",
        "  'token': 3913,\n",
@@ -239,10 +178,6 @@
        "  'score': 6.058303824829636e-06,\n",
        "  'token': 8133,\n",
        "  'token_str': 'anchor'},\n",
-       " {'sequence': 'david is a anchor.',\n",
-       "  'score': 6.058303824829636e-06,\n",
-       "  'token': 8133,\n",
-       "  'token_str': 'anchor'},\n",
        " {'sequence': 'david is a camera.',\n",
        "  'score': 5.891070031793788e-06,\n",
        "  'token': 4950,\n",
@@ -255,18 +190,6 @@
        "  'score': 5.891070031793788e-06,\n",
        "  'token': 4950,\n",
        "  'token_str': 'camera'},\n",
-       " {'sequence': 'david is a camera.',\n",
-       "  'score': 5.891070031793788e-06,\n",
-       "  'token': 4950,\n",
-       "  'token_str': 'camera'},\n",
-       " {'sequence': 'david is a heir.',\n",
-       "  'score': 4.549509867501911e-06,\n",
-       "  'token': 8215,\n",
-       "  'token_str': 'heir'},\n",
-       " {'sequence': 'david is a heir.',\n",
-       "  'score': 4.549509867501911e-06,\n",
-       "  'token': 8215,\n",
-       "  'token_str': 'heir'},\n",
        " {'sequence': 'david is a heir.',\n",
        "  'score': 4.549509867501911e-06,\n",
        "  'token': 8215,\n",
@@ -283,22 +206,10 @@
        "  'score': 3.050748773603118e-06,\n",
        "  'token': 2610,\n",
        "  'token_str': 'police'},\n",
-       " {'sequence': 'david is a police.',\n",
-       "  'score': 3.050748773603118e-06,\n",
-       "  'token': 2610,\n",
-       "  'token_str': 'police'},\n",
        " {'sequence': 'david is a meteor.',\n",
        "  'score': 2.2439576241595205e-06,\n",
        "  'token': 23879,\n",
        "  'token_str': 'meteor'},\n",
-       " {'sequence': 'david is a meteor.',\n",
-       "  'score': 2.2439576241595205e-06,\n",
-       "  'token': 23879,\n",
-       "  'token_str': 'meteor'},\n",
-       " {'sequence': 'david is a stunt.',\n",
-       "  'score': 1.9855142454616725e-06,\n",
-       "  'token': 15412,\n",
-       "  'token_str': 'stunt'},\n",
        " {'sequence': 'david is a stunt.',\n",
        "  'score': 1.9855142454616725e-06,\n",
        "  'token': 15412,\n",
@@ -327,14 +238,6 @@
        "  'score': 1.5720137298558257e-06,\n",
        "  'token': 3626,\n",
        "  'token_str': 'crew'},\n",
-       " {'sequence': 'david is a crew.',\n",
-       "  'score': 1.5720137298558257e-06,\n",
-       "  'token': 3626,\n",
-       "  'token_str': 'crew'},\n",
-       " {'sequence': 'david is a congress.',\n",
-       "  'score': 7.466741180905956e-07,\n",
-       "  'token': 3519,\n",
-       "  'token_str': 'congress'},\n",
        " {'sequence': 'david is a congress.',\n",
        "  'score': 7.466741180905956e-07,\n",
        "  'token': 3519,\n",
@@ -351,10 +254,6 @@
        "  'score': 6.648027124356304e-07,\n",
        "  'token': 4633,\n",
        "  'token_str': 'weather'},\n",
-       " {'sequence': 'david is a fire.',\n",
-       "  'score': 5.99695454184257e-07,\n",
-       "  'token': 2543,\n",
-       "  'token_str': 'fire'},\n",
        " {'sequence': 'david is a fire.',\n",
        "  'score': 5.99695454184257e-07,\n",
        "  'token': 2543,\n",
@@ -379,14 +278,6 @@
        "  'score': 2.675556061149109e-07,\n",
        "  'token': 14030,\n",
        "  'token_str': 'crafts'},\n",
-       " {'sequence': 'david is a crafts.',\n",
-       "  'score': 2.675556061149109e-07,\n",
-       "  'token': 14030,\n",
-       "  'token_str': 'crafts'},\n",
-       " {'sequence': 'david is a sales.',\n",
-       "  'score': 2.3191360298824293e-07,\n",
-       "  'token': 4341,\n",
-       "  'token_str': 'sales'},\n",
        " {'sequence': 'david is a sales.',\n",
        "  'score': 2.3191360298824293e-07,\n",
        "  'token': 4341,\n",
@@ -399,14 +290,6 @@
        "  'score': 1.592107992109959e-07,\n",
        "  'token': 3462,\n",
        "  'token_str': 'flight'},\n",
-       " {'sequence': 'david is a flight.',\n",
-       "  'score': 1.592107992109959e-07,\n",
-       "  'token': 3462,\n",
-       "  'token_str': 'flight'},\n",
-       " {'sequence': 'david is a fore.',\n",
-       "  'score': 6.78428202505188e-09,\n",
-       "  'token': 18921,\n",
-       "  'token_str': 'fore'},\n",
        " {'sequence': 'david is a fore.',\n",
        "  'score': 6.78428202505188e-09,\n",
        "  'token': 18921,\n",
@@ -417,34 +300,101 @@
        "  'token_str': 'fore'}]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unmasker(\"David is a [MASK].\",targets=['actor', 'actor', 'actor', 'actress', 'anchor', 'anchor', 'anchorman', 'anchorwoman', 'flight attendant', 'flight attendant', 'steward', 'stewardess', 'businessperson', 'businessperson', 'businessman', 'businesswoman', 'camera operator', 'camera operator', 'cameraman', 'camerawoman', 'congressperson', 'congressperson', 'congressman', 'congresswoman', 'craftsperson', 'craftsperson', 'craftsman', 'craftswoman', 'crewmember', 'crewmember', 'crewman', 'crewwoman', 'firefighter', 'firefighter', 'fireman', 'firewoman', 'foreperson', 'foreperson', 'foreman', 'forewoman', 'heir', 'heir', 'heir', 'heiress', 'hero', 'hero', 'hero', 'heroine', 'host', 'host', 'host', 'hostess', 'hunter', 'hunter', 'hunter', 'huntress', 'layperson', 'layperson', 'layman', 'laywoman', 'police officer', 'police officer', 'policeman', 'policewoman', 'salesperson', 'salesperson', 'salesman', 'saleswoman', 'stunt double', 'stunt double', 'stuntman', 'stuntwoman', 'villain', 'villain', 'villain', 'villainess', 'meteorologist', 'meteorologist', 'weatherman', 'weatherwoman'])"
+    "unmasker(\"David is a [MASK].\",targets=['actor', 'actress', 'anchor', 'anchorman', 'anchorwoman', 'flight attendant', 'steward', 'stewardess', 'businessperson', 'businessman', 'businesswoman', 'camera operator', 'cameraman', 'camerawoman', 'congressperson', 'congressman', 'congresswoman', 'craftsperson', 'craftsman', 'craftswoman', 'crewmember', 'crewman', 'crewwoman', 'firefighter', 'fireman', 'firewoman', 'foreperson', 'foreman', 'forewoman', 'heir', 'heiress', 'hero', 'heroine', 'host', 'hostess', 'hunter', 'huntress', 'layperson', 'layman', 'laywoman', 'police officer', 'policeman', 'policewoman', 'salesperson', 'salesman', 'saleswoman', 'stunt double', 'stuntman', 'stuntwoman', 'villain', 'villainess', 'meteorologist', 'weatherman', 'weatherwoman'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "c87d2c1d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.00002237'"
+       "[{'sequence': 'david is a congress person.',\n",
+       "  'score': 4.98946121751942e-07,\n",
+       "  'token': 3519,\n",
+       "  'token_str': 'congress'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"{:.8f}\".format(float(\"2.236605178040918e-05\"))"
+    "unmasker(\"David is a [MASK]person.\", targets='congress')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b66411bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'sequence': 'david is a congress person.',\n",
+       "  'score': 0.00013918358308728784,\n",
+       "  'token': 2711,\n",
+       "  'token_str': 'person'}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unmasker(\"David is a congress[MASK].\", targets='person')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "414cf8d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'sequence': 'david is a christian.',\n",
+       "  'score': 0.1384967565536499,\n",
+       "  'token': 3017,\n",
+       "  'token_str': 'christian'},\n",
+       " {'sequence': 'david is a republican.',\n",
+       "  'score': 0.07502420246601105,\n",
+       "  'token': 3951,\n",
+       "  'token_str': 'republican'},\n",
+       " {'sequence': 'david is a lawyer.',\n",
+       "  'score': 0.0692252367734909,\n",
+       "  'token': 5160,\n",
+       "  'token_str': 'lawyer'},\n",
+       " {'sequence': 'david is a catholic.',\n",
+       "  'score': 0.057217374444007874,\n",
+       "  'token': 3234,\n",
+       "  'token_str': 'catholic'},\n",
+       " {'sequence': 'david is a democrat.',\n",
+       "  'score': 0.03768182173371315,\n",
+       "  'token': 7672,\n",
+       "  'token_str': 'democrat'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unmasker(\"David is a [MASK].\")"
    ]
   }
  ],
